<resources>
    <string name="app_name">BggApplication</string>
    <string name="err_bgg_api_request_failed">Request failed</string>
    <string name="thumbnail_description">Board game thumbnail</string>
    <string name="delete_button_description">Delete</string>
    <string name="board_game_overview_header_rank">Rank</string>
    <string name="board_game_overview_header_thumbnail">Image</string>
    <string name="board_game_overview_header_content">Game</string>
    <string name="board_game_overview_header_delete">Delete</string>
    <string name="add_board_game">Add new board game</string>
    <string name="board_game_title_and_year_template">%s (%d)</string>
    <string name="order_by">Order by:</string>
    <string name="rank_asc">Rank ASC</string>
    <string name="rank_desc">Rank DESC</string>
    <string name="year_asc">Year ASC</string>
    <string name="year_desc">Year DESC</string>
    <string name="locations">Locations</string>
    <string name="user_collection">User collection</string>
    <string name="location_board_game_count_template">Board games: %d</string>
    <string name="add_location">Add location</string>
    <string name="err_location_name_duplicate">Location with this name already exists</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name_label">Name:</string>
    <string name="err_invalid_value">Invalid value</string>
    <string name="search">Search</string>
    <string name="add_custom">Add custom</string>
    <string name="title_label">Title:</string>
    <string name="original_title_label">Original title:</string>
    <string name="year_published_label">Year published:</string>
    <string name="thumbnail_label">Thumbnail:</string>
    <string name="thumbnail_preview_label">Thumbnail preview:</string>
    <string name="description_label">Description:</string>
    <string name="order_date_label">Order date:</string>
    <string name="add_to_collection_date_label">Add to collection date:</string>
    <string name="price_label">Price:</string>
    <string name="suggested_retail_price_label">Suggested retail price:</string>
    <string name="code_ean_upc_label">EAN/UPC code:</string>
    <string name="production_code_label">Production code:</string>
    <string name="type_label">Type:</string>
    <string name="comment_label">Comment:</string>
    <string name="artists_label">Artists:</string>
    <string name="add_artist">Add artist</string>
    <string name="designers_label">Designers:</string>
    <string name="location_label">Location:</string>
    <string name="location_comment_label">Location comment:</string>
    <string name="game">Game</string>
    <string name="expansion">Expansion</string>
    <string name="mixed">Mixed</string>
    <string name="rank_template">Rank: %s</string>
    <string name="err_artist_already_added">Artist already added</string>
    <string name="err_designer_already_added">Designer already added</string>
    <string name="rank_label">Rank:</string>
    <string name="rank_history">Rank history</string>
    <string name="back">Back</string>
    <string name="date">Date</string>
    <string name="value">Rank</string>
    <string name="username_label">Username:</string>
    <string name="import_collection">Import collection</string>
    <string name="update_ranking">Update ranking</string>
    <string name="username">Username</string>
    <string name="err_location_not_empty">Cannot delete not empty location</string>
    <string name="find_game">Find game…</string>
    <string name="location_name">Location name</string>
    <string name="add_designer">Add designer</string>
</resources>