<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application.activities.MainActivity">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/board_game_overview_horizontal_margin"
        android:layout_marginEnd="@dimen/board_game_overview_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewHeaderRank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/board_game_overview_rank_weight"
            android:gravity="center_horizontal"
            android:text="@string/board_game_overview_header_rank" />

        <TextView
            android:id="@+id/textViewHeaderThumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/board_game_overview_thumbnail_weight"
            android:gravity="center_horizontal"
            android:text="@string/board_game_overview_header_thumbnail" />

        <TextView
            android:id="@+id/textViewHeaderContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/board_game_overview_content_weight"
            android:gravity="center_horizontal"
            android:text="@string/board_game_overview_header_content" />

        <TextView
            android:id="@+id/textViewHeaderDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/board_game_overview_delete_weight"
            android:gravity="center_horizontal"
            android:text="@string/board_game_overview_header_delete" />
    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/board_game_overview_horizontal_margin"
        android:layout_marginEnd="@dimen/board_game_overview_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_board_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>